--- a/config.ini
+++ b/config.ini
@@ -1,20 +1,31 @@
+[General]
+vmaf_version = 2
+
 [Calculations]
-ffmpeg_location = "ffmpeg"
+ffmpeg_location = ffmpeg
 threads = 0
 instances = 1
 psnr = no
 ssim = no
 ms_ssim = no
-model_path = "vmaf_v0.6.1.pkl"
-log_format = "xml"
+model = vmaf_v0.6.1
+log_name = vmaf
+log_format = xml
+
+[Graphing]
+output = vmaf
+lower_boundary = default
+custom = 0
 
 [Image Settings]
-x = "1920"
-y = "1080"
-dpi = "100"
-format = "svg"
+x = 1920
+y = 1080
+dpi = 100
+format = svg
+transparent = yes
 
 [Video Settings]
-x = "1920"
-y = "1080"
-framerate = "60"
+x = 1920
+y = 1080
+framerate = 60
+transparent = yes
