Added pipenv, big changes to calculator code

--- a/config.ini
+++ b/config.ini
@@ -3,31 +3,34 @@ vmaf_version = 2
 
 [Calculations]
 ffmpeg_location = ffmpeg
-threads = 0
-instances = 1
-psnr = no
-ssim = no
-ms_ssim = no
+psnr = False
+ssim = False
+ms_ssim = False
 model = vmaf_v0.6.1
 log_name = vmaf
 log_format = xml
+threads = 32
+instances = 1
+use_remaining_threads = False
 
 [Graphing]
 output = vmaf
 lower_boundary = default
 custom = 0
-threads = 0
+threads = 32
 instances = 1
+use_remaining_threads = False
 
 [Image Settings]
-x = 1920
-y = 1080
-dpi = 100
+x = 1920.0
+y = 1080.0
+dpi = 100.0
 format = svg
-transparent = yes
+transparent = True
 
 [Video Settings]
-x = 1920
-y = 1080
-framerate = 60
-transparent = yes
+x = 1920.0
+y = 1080.0
+framerate = 60.0
+transparent = True
+
