More big changes

--- a/config.ini
+++ b/config.ini
@@ -2,23 +2,23 @@
 vmaf_version = 2
 
 [Calculations]
-ffmpeg_location = ffmpeg
+ffmpeg = ffmpeg
 psnr = False
 ssim = False
 ms_ssim = False
 model = vmaf_v0.6.1
 log_name = vmaf
 log_format = xml
-threads = 32
-instances = 1
+threads = 0
+processes = 1
 use_remaining_threads = False
 
 [Graphing]
 output = vmaf
 lower_boundary = default
 custom = 0
-threads = 32
-instances = 1
+threads = 0
+processes = 1
 use_remaining_threads = False
 
 [Image Settings]
@@ -33,4 +33,3 @@ x = 1920.0
 y = 1080.0
 framerate = 60.0
 transparent = True
-
