--- a/Pipfile
+++ b/Pipfile
@@ -7,8 +7,6 @@ name = "pypi"
 ffmpy = ">=0.3.0"
 matplotlib = ">=3.3.4"
 numpy = ">=1.20.1"
+pywin32 = {version = ">=300", sys_platform = "== 'win32'"}
 
 [dev-packages]
-
-[requires]
-python_version = "3.9"
