Major update - can now encode do single calculation

--- a/config.ini
+++ b/config.ini
@@ -1,15 +1,15 @@
 [General]
 vmaf_version = 2
+ffmpeg = ffmpeg
 
 [Calculations]
-ffmpeg = ffmpeg
 psnr = False
 ssim = False
 ms_ssim = False
 model = vmaf_v0.6.1
-log_name = vmaf
+log_path = vmaf
 log_format = xml
-threads = 0
+threads = 32
 processes = 1
 use_remaining_threads = False
 
@@ -17,7 +17,7 @@ use_remaining_threads = False
 output = vmaf
 lower_boundary = default
 custom = 0
-threads = 0
+threads = 32
 processes = 1
 use_remaining_threads = False
 
@@ -33,3 +33,4 @@ x = 1920.0
 y = 1080.0
 framerate = 60.0
 transparent = True
+
