--- a/config.ini
+++ b/config.ini
@@ -6,6 +6,7 @@ ffmpeg = ffmpeg
 psnr = False
 ssim = False
 ms_ssim = False
+subsamples = 1
 model = vmaf_v0.6.1
 log_path = vmaf
 log_format = xml
@@ -33,4 +34,3 @@ x = 1920.0
 y = 1080.0
 framerate = 60.0
 transparent = True
-
