--- a/config.ini
+++ b/config.ini
@@ -10,6 +10,7 @@ subsamples = 1
 model = vmaf_v0.6.1
 log_path = vmaf
 log_format = xml
+hwaccel = False
 threads = 32
 processes = 1
 use_remaining_threads = False
