--- a/Pipfile
+++ b/Pipfile
@@ -9,11 +9,10 @@ matplotlib = ">=3.4.1"
 numpy = ">=1.20.2"
 pandas = ">=1.3.3"
 tqdm = ">=4.62.3"
-pywin32 = {version = ">=300", sys_platform = "== 'win32'"}
-# flake8-spellcheck = ">=0.24.0"
 
 [dev-packages]
 black = "*"
 isort = "*"
 flake8 = "*"
+# flake8-spellcheck = "*"
 vermin = "*"
