Anothe big update, added initial Gooey usage

--- a/config.ini
+++ b/config.ini
@@ -1,13 +1,12 @@
 [General]
-vmaf_version = 2
 ffmpeg = ffmpeg
 
 [Calculations]
-psnr = False
-ssim = False
-ms_ssim = False
+psnr = True
+ssim = True
+ms_ssim = True
 subsamples = 1
-model = vmaf_v0.6.1
+models = vmaf_v0.6.1
 log_path = vmaf
 log_format = xml
 hwaccel = False
