--- a/Pipfile
+++ b/Pipfile
@@ -5,7 +5,7 @@ name = "pypi"
 
 [packages]
 ffmpy = ">=0.3.0"
-gooey = "*"
+gooey = ">=1.0.8.1"
 matplotlib = ">=3.4.1"
 numpy = ">=1.20.2"
 pandas = ">=1.3.3"
