--- a/Pipfile
+++ b/Pipfile
@@ -9,6 +9,7 @@ gooey = ">=1.0.8.1"
 matplotlib = ">=3.4.1"
 numpy = ">=1.20.2"
 pandas = ">=1.3.3"
+toml = ">=0.10.2"
 tqdm = ">=4.62.3"
 
 [dev-packages]
@@ -16,4 +17,5 @@ black = "*"
 isort = "*"
 flake8 = "*"
 # flake8-spellcheck = "*"
+pyinstaller = "*"
 vermin = "*"
