--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -3,8 +3,10 @@ gooey>=1.0.8.1
 matplotlib>=3.4.1
 numpy>=1.20.2
 pandas>=1.3.3
+toml>=0.10.2
 tqdm>=4.62.3
 black>=21.9b0
 isort>=5.9.3
 flake8>=3.9.2
+pyinstaller>=4.7
 vermin>=1.2.2
