--- a/setup.cfg
+++ b/setup.cfg
@@ -3,10 +3,19 @@ verbose = 3
 processes = 4
 
 # Some PEP8 deviations are considered irrelevant to the program:
-#       F401 imported but unused
+#       F402 imported but unused
 #       E501 line too long
 [flake8]
-per-file-ignores =
+max-line-length = 120
+# per-file-ignores =
+ignore = 
   *.py: E402, E501
 # F401, 
-exclude = __pycache__,.venv*,.git, .github
+exclude =
+  __pycache__,
+  .venv*,
+  .git,
+  .github,
+  vmaf_calculator_old.py,
+  vmaf_config_handler.py
+  vmaf_file_handler.py
