--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,10 +3,18 @@ repos:
     rev: 21.12b0
     hooks:
       - id: black
-        language_version: python3.9
+        language_version: python3.8
+        name: black (python)
+
+  - repo: https://github.com/pycqa/isort
+    rev: 5.10.1
+    hooks:
+      - id: isort
+        name: isort (python)
 
   - repo: https://github.com/pycqa/flake8
     rev: '4.0.1'
     hooks:
       - id: flake8
-        language_version: python3.9
+        language_version: python3.8
+        name: flake8 (python)
