--- a/Pipfile
+++ b/Pipfile
@@ -4,6 +4,7 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
+defusedxml = ">=0.7.1"
 ffmpy = ">=0.3.0"
 gooey = ">=1.0.8.1"
 matplotlib = ">=3.4.1"
