Temp removal os isort in lint action

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -9,15 +9,15 @@ jobs:
       - uses: actions/checkout@v2
       - uses: psf/black@stable
   
-  isort:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-python@v2
-        with:
-          python-version: 3.8
-      - uses: jamescurtin/isort-action@master
-        with:
-            requirementsFiles: "requirements-dev.txt"
+  # isort:
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - uses: actions/checkout@v2
+  #     - uses: actions/setup-python@v2
+  #       with:
+  #         python-version: 3.8
+  #     - uses: jamescurtin/isort-action@master
+  #       with:
+  #           requirementsFiles: "requirements-dev.txt"
 
   
