--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -38,6 +38,9 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v2
 
+    - name: Install dependencies
+      run: pip install -r requirements-dev.txt
+
     - name: Initialize CodeQL
       uses: github/codeql-action/init@v1
       with:
