--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,9 +1,10 @@
+default_language_version:
+  python: python3.9
 repos:
   - repo: https://github.com/psf/black
     rev: 21.12b0
     hooks:
       - id: black
-        language_version: python3.8
         name: black (python)
 
   - repo: https://github.com/pycqa/isort
@@ -16,5 +17,4 @@ repos:
     rev: '4.0.1'
     hooks:
       - id: flake8
-        language_version: python3.8
         name: flake8 (python)
