--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
-defusedxml>=0.7.1
-ffmpy>=0.3.0
-gooey>=1.0.8.1
-matplotlib>=3.4.1
-numpy>=1.20.2
-pandas>=1.3.3
+defusedxml==0.7.1
+ffmpy==0.3.0
+Gooey==1.0.8.1
+matplotlib==3.5.2
+numpy==1.22.4
+pandas==1.4.2
+PySimpleGUIQt==0.35.0
 toml>=0.10.2
-tqdm>=4.62.3
+tqdm==4.64.0
